objects/INFRA__Part_Forecast__c.object
<CustomObject>
    <description>Object to store Part Forecast data that needs to be published to JDA Bridge. Data in this object will be populated by BU Forecasting Tool. This object will be part of the INFRA framework</description>
    <fields>
        <fullName>INFRA__BU_Forecast_Source_Id__c</fullName>
        <description>Field that keeps the reference to BU Forecast Tool SFDC object record</description>
        <inlineHelpText>Forecast leaf level SFDC Id. Example - Opportunity Id or Opp Line Item Id or Forecast Id</inlineHelpText>
        <label>BU Forecast Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Business_Unit__c</fullName>
        <description>BU identifier for which the forecast data is created. The value in this field should have the corresponding configuration in custom settings &quot;JDA Connector Config&quot;.</description>
        <inlineHelpText>Business Unit Abbreviation that is required by JDA bridge.</inlineHelpText>
        <label>Business Unit</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Customer_Indicator__c</fullName>
        <description>Field to store Customer Indicator(Type)</description>
        <inlineHelpText>Valid values can be - 
200	Sold-To</inlineHelpText>
        <label>Customer Indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Customer__c</fullName>
        <description>Field to store TED Customer #</description>
        <inlineHelpText>TED Customer #, recognized by JDA</inlineHelpText>
        <label>Customer #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Data_Stream__c</fullName>
        <description>Field to indicate if the forecast data is for opportunity or sales forecast</description>
        <inlineHelpText>500 - Sales Opportunity 
501 - Engineering Opportunity 
506 - Sales Booking Forecast 
507 - Sales Demand Forecast</inlineHelpText>
        <label>Data Stream</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Forecast_Key__c</fullName>
        <description>Unique External Id Field. This key will be generated by the Framework</description>
        <externalId>true</externalId>
        <label>Forecast Key</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>INFRA__Marked_For_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if data needs to be deleted from bridge</description>
        <inlineHelpText>Flag to indicate if record needs to be deleted.</inlineHelpText>
        <label>Marked For Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INFRA__Product_Code__c</fullName>
        <description>Forecast product/part code.</description>
        <inlineHelpText>Valid values are Part # or GPL Code</inlineHelpText>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Product_Hierarchy_Indicator__c</fullName>
        <description>The level of the TE product hierarchy</description>
        <inlineHelpText>Valid values are - 
300	- GPL
301 - Product
302	- Part
303	- Proposed
304 - Proposed/Similar-To</inlineHelpText>
        <label>Product Hierarchy Indicator</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field indicating if the forecast data is published to JDA Bridge</description>
        <inlineHelpText>Flag to indicate that forecast was published in the bridge by integration</inlineHelpText>
        <label>Published?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INFRA__Re_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag field to indicate that the record was republished by API and needs to be pushed to Bridge</description>
        <inlineHelpText>A flag field to indicate that the record was republished by API and needs to be pushed to Bridge</inlineHelpText>
        <label>Re-Published?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INFRA__Region__c</fullName>
        <description>If BU has multiple region, then those value needs to be passed or the BU level Default Region will be used from BU Configurations.
Examples are EMEA (0401), NA, SA, ANZ, AP</description>
        <inlineHelpText>EMEA (0401), NA, SA, ANZ, AP</inlineHelpText>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Site_Indicator__c</fullName>
        <description>Site Indicator for the Site. Values are - 
100	Building
101	Plant
102	Legal Org
103	Others</description>
        <inlineHelpText>Site Indicator for the Site. Values are - 
100	Building 
101	Plant 
102	Legal Org 
103	Others</inlineHelpText>
        <label>Site Indicator</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Site__c</fullName>
        <description>The plant or the building that the data is being sent for. For e.g. 0492, D71 etc. If value is not set then default global value will be used</description>
        <inlineHelpText>The plant or the building that the data is being sent for. For e.g. 0492, D71 etc.</inlineHelpText>
        <label>Site</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Territory_Code__c</fullName>
        <description>Forecast Territory, such as GAM code or Sales territory code</description>
        <inlineHelpText>Sales territory code</inlineHelpText>
        <label>Territory Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Territory_Indicator__c</fullName>
        <description>Sales territory indicator. DD1 to DD7</description>
        <inlineHelpText>DD1 to DD7</inlineHelpText>
        <label>Territory Indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Part Forecast</label>
    <listViews>
        <fullName>INFRA__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>INFRA__Customer__c</columns>
        <columns>INFRA__Business_Unit__c</columns>
        <columns>INFRA__Marked_For_Delete__c</columns>
        <columns>INFRA__Data_Stream__c</columns>
        <columns>INFRA__Forecast_Key__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>INFRA__Published__c</columns>
        <columns>INFRA__Re_Published__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Forecast #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>